--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -64,9 +64,9 @@ jobs:
     - name: Download CNN Portugal Feed
       run: |-
         curl "https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fcnnportugal.iol.pt%2Frss.xml?v=$(date +%s)" | jq '.items[:20] |  map(.date_published = .pubDate | .url = .link | del(.pubDate, .link)) | map({title, url, date_published, media: "CNN Portugal", mediaLogo: "/assets/img/cnn-portugal.png"})' | jq -r tostring > digest/latest--cnnportugal.json
-    - name: Parse date
-      run: |-
-        jq '.[].date_published |= strflocaltime' digest/latest--cnnportugal.json
+    #- name: Parse date
+    #  run: |-
+    #    jq '.[].date_published |= strflocaltime' digest/latest--cnnportugal.json
     - name: Find and Replace Links
       uses: jacobtomlinson/gha-find-replace@v3
       with:
