--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -13,10 +13,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Download RR xml
+    - name: Download Google Trends xml
       run: |-
         curl -o google-trends.xml https://trends.google.com/trends/trendingsearches/daily/rss?geo=PT
-    - name: Download Google Trends xml
+    - name: Download RR xml
       run: |-
         curl -o rr.xml https://rr.sapo.pt/rss/rssfeed.aspx?section=section_noticias
     #- name: Download CNN Portugal xml
@@ -65,7 +65,7 @@ jobs:
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         find: " standalone='yes'?"
-        replace: ""
+        replace: " standalone='no'?"
         include: "google-trends.xml"
     - name: Download Google Trends Feed
       run: |-
