--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -61,12 +61,9 @@ jobs:
     - name: Download Notícias ao Minuto Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fwww.noticiasaominuto.com%2Frss%2Fultima-hora?v=$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, media: "Notícias ao Minuto"})' | jq -r tostring > digest/latest--noticiasaominuto.json
-    - name: Find and Replace standalone part
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: 'yes'
-        replace: 'no'
-        include: "google-trends.xml"
+    - name: Change Yes to No in google-trends.xml
+      run: |-
+        sed -i 's/Yes/No/g' google-trends.xml
     - name: Download Google Trends Feed
       run: |-
         curl "https://www.toptal.com/developers/feed2json/convert?url=https://raw.githubusercontent.com/alexmsantos/data/main/google-trends.xml?v=$(date +%s)" | jq '.items[:20] | map({title, url, date_published, media: "Google Trends"})' |jq -r tostring > digest/google-trends.json
